--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "cd server && node index.js"
+    "start": "cd server && node index.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -22,5 +22,8 @@
     "node-cache": "^5.1.2"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "prettier": "^3.5.3"
+  }
 }
